client/src/pages/pages.scss
//Styling for all pages
.form-control {
  position: relative;
  margin-top: 2rem;

  label {
    position: absolute;
    bottom: 4px;
    left: 0;
    color: grey;
    pointer-events: none;

    transition: all 0.3s ease;
  }

  input {
    outline: none;
    border: none;
    border-bottom: 2px solid silver;
    width: 100%;
    font-size: 17px;

    transition: all 0.3s ease;

    //Moves the label for the input above the 
    //input box when the user is typing
    &:focus ~ label,
    &:valid ~ label {
      transform: translateY(-20px);
      /*font-size: 15px;*/
      color: #1d61e9;
    }

    //Makes the bottom border blue when 
    //the user is typing
    &:focus {
      border-bottom: 2px solid #1d61e9;
    }
  }
}

//Styling for text areas, mirrors text input 
.text-area {
  @media (max-width: 500px) {
    flex-direction: column-reverse;
  }

  position: static;
  display: flex; 
  flex-direction: row-reverse;
  justify-content: space-between;
  text-align: left;

  label {
    position: static;
    color: grey;
    pointer-events: none;
    width: 8rem;

    transition: all 0.3s ease;
  }

  textarea {
    resize: vertical;
    outline: none;
    border: 2px solid silver;
    font-size: 17px;
    width: 100%;
    font-family:'Segoe UI', Roboto, sans-serif ;
    
    transition: border 0.3s ease;

    &:focus ~ label,
    &:valid ~ label {
      color: #1d61e9;
    }

    //Makes the bottom border blue when 
    //the user is typing
    &:focus {
      border: 2px solid #1d61e9;
    }
  }
}

.time {
  @media (max-width: 500px) {
    flex-direction: column-reverse;
  }

  margin-top: 1rem;
  position: static;
  display: flex; 
  flex-direction: row-reverse;
  justify-content: space-between;
  text-align: left;

  label {
    position: initial;
    color: grey;
    pointer-events: none;
    width: 8rem;
    transition: color ease 0.3s;
    
    &:hover {
      color: grey !important;
      transform: translateY(0) !important;
      bottom: 0;
    }
  }

  input {
    outline: none;
    border: none;
    font-size: 16px;
    max-width: 100%;
    transition: none;
    overflow-x: visible;
  
    &:hover {
      border: none !important;
    }

    &:focus ~ label,
    &:valid ~ label {
      color: #1d61e9;
    }
  }
}

//Styling for the role radio buttons
.role {
  label, input {
    width: 100%;
    display: block;
    position: initial;
    outline: none;
    margin: auto;
    text-align: left;
    color: black;
    cursor: initial;
  }

  .radioBtn {
    margin: auto;
    display: flex;
    text-align: right;
  }

  input:hover {
    cursor: pointer;
  }
}

.form-actions {
  width: 100%;
  margin: 1rem 0;
  text-align: right;

  #submit {
    width: 50%;
  }
}

.btn {
  outline: none;
  border: none;
  border-radius: 4px;
  background: #f0f0f0;
  color: black;
  text-align: center;
  padding: 0.25rem;
  transition-duration: 0.3s;

  box-shadow: #43475545 0px 0px 0.25em, 
              #5a7dbc0d 0px 0.25em 1em;

  &:hover {
    background-color: #DAE8FC;
    cursor: pointer;
  }
}

//Base styling for each main div 
%main {
  margin: auto;
  margin-top: 6rem;
  margin-bottom: 2rem;

  background: white;
  padding: 2rem;
  border-radius: 8px;

  box-shadow: #43475545 0px 0px 0.25em, 
              #5a7dbc0d 0px 0.25em 1em;
}

//styling for the authentication page
#auth {
  @extend %main; //gives the main page styling 
  //(white background, shadow etc.)

  max-width: calc(80% - 4rem);
  width: 250px; 

  #options {
    width: 100%;
    
    display: grid;
    grid-template-columns: 50% 50%;

    .optionBtn {
      outline: none;
      border: none;
      background-color: white;
      border-bottom: 1px solid white;
      font-size: 17px;
    }

    .current {
      color: #1d61e9;
    }

    .other {
      color: #838383;

      &:hover {
        color: black;
        cursor: pointer;
      }
    }

    #left {
      border-right: 1px solid silver;
    }

    #right {
      border-left: 1px solid silver;
    }
  }
}

#teacher-homepage {
  @extend %main; //gives the main page styling 
  //(white background, shadow etc.)

  max-width: calc(80% - 4rem);
  width: 640px; 

  #welcome-msg {
    text-align: left;
    margin-bottom: 2rem;
    font-weight: 700;
  }


  #thp-tables {
    p {
      margin-bottom: 1rem;
    }

    display: grid;
    grid-template-columns: 50% 50%;

    .table {
      margin: 1rem 0;
      table-layout: fixed;
      width: 100%;

      tbody {
        width: 100%;

        td {
          padding: 2px;
          height: 3em;
        }

        .left {
          font-weight: 500;
          width: 50%;
          text-align: left;
        }
        .right {
          text-align: right;
        }
      }
    }

    .btn {
      height: 3em;
      margin: 8px;
    }

    #classes {
      border-right: 1px solid black;
      padding-right: 2rem;

      #class-buttons {
        display: flex;
        align-items: stretch;
        flex-wrap: wrap;
        justify-content: center;

        .btn {
          width: 7rem;
        }
      }
    }

    #students {
      border-left: 1px solid black;
      padding-left: 2rem;

      #student-buttons {
        display: flex;
        justify-content: center;
      }
    }

    /*if the screen is smaller than 880px wide 
    (make tables vertically stacked instead of 
    horizontally stacked)*/
    @media (max-width: 880px) {
      grid-template-columns: 100%;

      table {
        tbody {
          tr {
            td {
              border-bottom: 1px dashed gray;

              /*right column has left border (centre)*/
              &:last-child {
                border-left: 1px dashed gray;
              }
            }

            /*bottom row doesn't need border below*/
            &:last-child {
              td {
                border-bottom: none;
              }
            }
          } 
        }
      }

      #classes {
        border:none;
        border-bottom: 1px solid black;

        padding: 0;
        padding-bottom: 2rem;

        #class-buttons {
          display: flex;
          align-items: stretch;
          flex-wrap: wrap;
          justify-content: center;
        }
      }

      #students {
        border: none;
        border-top: 1px solid black;

        padding: 0;
        padding-top: 2rem;
      }
    }
  }

  #create-class {
    margin-top: 2rem;
    
    #class-form {
      width: 100%;

      .form-control {
        width: 320px;
        max-width: 80%;
        margin-left: auto;
        margin-right: auto;
      }

      .form-actions {  
        width: 100%;
        text-align: center !important;

        .btn {
          width: 8rem !important;
          height: 3em !important;
        }
      }
    }
  }
}

#quiz-creation {
  @extend %main; //gives the main page styling 
  //(white background, shadow etc.)

  max-width: calc(80% - 4rem);
  width: 640px; 

  #question-creation-page {
    .select {
      margin: 1rem 0;
    }

    #submit-button {
      margin-top: 1rem;
      width: 16rem;
    }

    #create-question-header {
      display: flex;
      justify-content: space-between;
      text-align: left;

      button {
        width: 5rem;
      }
    }
  }

  #assignment-form {
    #assignment-details {
      //line between top and bottom of page context
      border-bottom: 2px dashed grey;

      //Splitting the form to left and right side
      display: grid;
      grid-template-columns: 50% 50%;

      /*if the screen is smaller than 880px wide 
      (make tables vertically stacked instead of 
      horizontally stacked)*/
      @media (max-width: 880px) {
        grid-template-columns: 100%;
      }

      .side {
        padding: 0.5rem;

        @media (max-width: 880px) {
          padding: 0.5rem 0;
        }
      }

      #right {
        table {
          margin: 1rem 0;
          table-layout: fixed;
          width: 100%;

          tbody {
            width: 100%;

            tr {
              td {
                padding: 2px;
                height: 2em;

                &:first-child {
                  text-align: left;
                  font-weight: 500;
                }

                &:nth-child(2) {
                  text-align: right;
                }
              }
            }
          }
        }

        #question-buttons {
          display: flex;
          justify-content: space-between;

          .btn {
            width: 45%;
          }
        }
      }
    }
  }

  #all-questions {
    padding: 0.5rem;

    @media (max-width: 880px) {
      padding: 0;
      padding-top: 0.5rem;
    }

    #all-questions-header {
      display: flex;
      justify-content: space-between;
      text-align: left;
    }

    #current-questions {
      margin-top: 1rem;
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-start;
      align-items: stretch;
      flex-direction: row;

      .question-card {
        width: 195px;
        padding: 8px;
        margin-bottom: 6px;
        margin-right: 6px;
        border: 1px solid black;
        border-radius: 8px;

        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        justify-content: flex-start;
        align-content: flex-start;
        text-align: left;

        transition: all ease 0.3s;

        h3 {
          margin-bottom: 8px;
        }

        &.short {
          background-color: #D5E8D4;
        }

        &.multichoice {
          background-color: #E1D5E7;
        }

        &:hover {
          filter: brightness(96%);
          cursor: pointer;
        }
      }
    }
  }
}

